# poi

./: .distrobox.ini  .gitignore  README.md  box  default.nix  dev  dev.sh  flake.nix  hie.yaml  mise.toml  poi.cabal  poi.nix  shell.nix
.github/workflows/: run-test.yaml  runtest.yaml
app/: Main.hs
gendata/: Main.hs
lib/: Poi.hs
lib/Poi/: Action.hs  EffMonad.hs  Entity.hs  Object.hs  Operation.hs  Time.hs  Type.hs
lib/Poi/Action/: Delete.hs  Erase.hs  List.hs  Move.hs  Prompt.hs  Setup.hs  UpdateMetaInfo.hs
lib/Poi/Operation/: Delete.hs  List.hs  Move.hs  Put.hs  Setup.hs  UpdateMetaInfo.hs
lib/Poi/System/: File.hs
nix/: default.nix  poi.nix  shell.nix
poi-cli/: Main.hs  README.md
poi-core/: Poi.hs
poi-core/Poi/: Action.hs  Config.hs  File.hs  Monad.hs
poi-core/Poi/Action/: Monad.hs  Put.hs
poi-core/Poi/Control/: Free.hs
poi-core/Poi/Control/Monad/: Free.hs
poi-core/Poi/Control/Monad/Trans/: Except.hs  Reader.hs
poi-core/Poi/Entity/: FileObject.hs  TrashCan.hs  TrashedObject.hs
poi-core/Poi/Type/: File.hs  Result.hs  Time.hs
scripts/: versioning
src/Poi/: Abnormal.hs  Action.hs  Cli.hs  Display.hs  Entity.hs  Prompt.hs  Time.hs  Version.hs
src/Poi/Action/: Bury.hs  ListUp.hs  PickUp.hs  Toss.hs  Version.hs
src/Poi/Action/Internal/: Context.hs  Helper.hs
src/Poi/Action/Type/: Index.hs  Result.hs
src/Poi/Api/: Json.hs
src/Poi/File/: IO.hs  Parser.hs
src/Poi/Internal/: Debug.hs
src/Poi/Internal/Data/: Text.hs
src/Poi/TUI/: App.hs  CommandGuide.hs  CommandSelector.hs  Common.hs  FilterInput.hs  Main.hs  State.hs  TrashList.hs
src/Poi/TUI/Development/: DebugWindow.hs
src/Poi/TUI/Widget/: CommandGuide.hs  Confirm.hs  Dialog.hs  FilterInput.hs  MessageBox.hs  TrashList.hs
src/Poi/TUI/Widget/Internal/: DebugWindow.hs
test/: test.hs  tests.hs
test/Poi/Test/: Arbitrary.hs  E2E.hs  Fixture.hs  Time.hs  Util.hs
test/Poi/Test/Action/: List.hs  UpdateMetaInfo.hs
test/Poi/Test/E2E/: Action.hs  File.hs  Util.hs
test/Poi/Test/E2E/File/: IO.hs
test/Poi/Test/Entity/: MetaInfo.hs  TrashedAt.hs
test/Poi/Test/Fixture/: SrcData.hs  TrashedData.hs
test/Poi/Test/Operation/: UpdateMetaInfo.hs
test/poi-core/: tests.hs
test/poi-core/Test/Poi/: ActionTest.hs  Arbitrary.hs
test/poi-core/Test/Poi/Control/: FreeTest.hs
test/poi-core/Test/Poi/Control/Monad/: FreeTest.hs
test/poi-core/Test/Poi/Control/Monad/Trans/: ExceptTest.hs  ReaderTest.hs
