cabal-version: 3.0
name: poi
version: 0.0.1
license:
author: mtwtkman
maintainer: 924277+mtwtkman@users.noreply.github.com
build-type: Simple

common warnings
  ghc-options: -Wall

common deps
  build-depends:
    base,
    containers,
    directory,
    filepath,
    regex,
    time,
    uuid,

executable poi
  import: warnings
  main-is: Main.hs
  build-depends:
    base,
    poi,

  ghc-options: -threaded
  hs-source-dirs: app
  default-language: Haskell2010

library
  import: warnings, deps
  hs-source-dirs: src
  build-depends:
    aeson,
    brick,
    microlens,
    microlens-mtl,
    microlens-th,
    mtl,
    optparse-applicative,
    regex,
    safe,
    text,
    vector,
    vty,

  exposed-modules:
    Poi.Abnormal
    Poi.Action
    Poi.Action.Bury
    Poi.Action.Internal.Context
    Poi.Action.Internal.Helper
    Poi.Action.ListUp
    Poi.Action.PickUp
    Poi.Action.Toss
    Poi.Action.Type.Index
    Poi.Action.Type.Result
    Poi.Action.Version
    Poi.Cli
    Poi.Display
    Poi.Entity
    Poi.File.IO
    Poi.File.Parser
    Poi.Internal.Debug
    Poi.Prompt
    Poi.TUI.App
    Poi.TUI.FilterInput
    Poi.TUI.State
    Poi.TUI.TrashList
    Poi.TUI.Common
    Poi.Time
    Poi.Version

test-suite test
  import: warnings, deps
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: test
  build-depends:
    HUnit,
    QuickCheck,
    poi,
    random,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    temporary,

  other-modules:
    Poi.Test.Arbitrary
    Poi.Test.E2E
    Poi.Test.E2E.Action
    Poi.Test.E2E.File
    Poi.Test.E2E.File.IO
    Poi.Test.E2E.Util
    Poi.Test.Fixture
    Poi.Test.Fixture.SrcData
    Poi.Test.Fixture.TrashedData
    Poi.Test.Util

  default-language: Haskell2010
